Cambios en la estructura del apartado principal
